Recuperação de compras e vendas feitas no BD exibindo nas telas de relatório e adição de assetas nas janelas Welcome, Login, Cadastrar e Menu

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,21 @@
+/botao-adicionarproduto.png
+/botao-cadastrar.png
+/botao-cadastrarusuario.png
+/botao-entrar.png
+/botao-entrarcomusuario.png
+/botao-finalizarcompra.png
+/botao-finalizarvenda.png
+/botao-menu-compra.png
+/botao-menu-financeiro.png
+/botao-menu-relatoriocompras.png
+/botao-menu-relatoriodevendas.png
+/botao-menu-venda.png
+/icone.png
+/logogrande.png
+/logopequena.png
+/icone-menu-compra.png
+/icone-menu-financeiro.png
+/icone-menu-relatoriocompras.png
+/icone-menu-relatoriodevendas.png
+/icone-menu-venda.png
 /window/
-/db/
