--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -19,3 +19,19 @@
 /icone-menu-relatoriodevendas.png
 /icone-menu-venda.png
 /window/
+/label-nomeusuario.png
+/label-senha.png
+/label-codbarras.png
+/label-descricao.png
+/label-formadepagamento.png
+/label-pagamento-sub1.png
+/label-pagamento-sub2.png
+/label-pagamento-titulo.png
+/label-preco.png
+/label-precototal.png
+/label-quantidade.png
+/label-troco.png
+/label-valorpago.png
+/label-venda-sub1.png
+/label-venda-sub2.png
+/label-venda-titulo.png
