Assets adicionados a janela RelatorioFinanceiro

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,37 +1,5 @@
-/botao-adicionarproduto.png
-/botao-cadastrar.png
-/botao-cadastrarusuario.png
-/botao-entrar.png
-/botao-entrarcomusuario.png
-/botao-finalizarcompra.png
-/botao-finalizarvenda.png
-/botao-menu-compra.png
-/botao-menu-financeiro.png
-/botao-menu-relatoriocompras.png
-/botao-menu-relatoriodevendas.png
-/botao-menu-venda.png
-/icone.png
-/logogrande.png
-/logopequena.png
-/icone-menu-compra.png
-/icone-menu-financeiro.png
-/icone-menu-relatoriocompras.png
-/icone-menu-relatoriodevendas.png
-/icone-menu-venda.png
-/window/
-/label-nomeusuario.png
-/label-senha.png
-/label-codbarras.png
-/label-descricao.png
-/label-formadepagamento.png
-/label-pagamento-sub1.png
-/label-pagamento-sub2.png
-/label-pagamento-titulo.png
-/label-preco.png
-/label-precototal.png
-/label-quantidade.png
-/label-troco.png
-/label-valorpago.png
-/label-venda-sub1.png
-/label-venda-sub2.png
-/label-venda-titulo.png
+/label-financeiro-lucrototal.png
+/label-financeiro-qtdprodutos.png
+/label-financeiro-valorfinanceiro.png
+/label-financeiro-titulo.png
+/label-financeiro-title.png
