Assets adicionados às janelas Relatorio de compras e Relatorio de Vendas

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,9 @@
 /label-financeiro-valorfinanceiro.png
 /label-financeiro-titulo.png
 /label-financeiro-title.png
+/label-relatoriocompras-sub1.png
+/label-relatoriocompras-titulo.png
+/label-relatoriocompras-title.png
+/window/
+/label-relatoriovendas-sub1.png
+/label-relatoriovendas-titulo.png
