Janela de listar produtos do estoque adicionada

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,3 +9,8 @@
 /window/
 /label-relatoriovendas-sub1.png
 /label-relatoriovendas-titulo.png
+/label-relatorioprodutos-sub1.png
+/label-relatorioprodutos-titulo.png
+/botao-menu-estoque.png
+/icone-menu-estoque.png
+/db/
