Modificada a compra de produtos com adição do preço de compra e do preço de venda

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -17,3 +17,6 @@
 /label-compra-sub1.png
 /label-compra-sub2.png
 /label-compra-titulo.png
+/.DS_Store
+/label-preco-compra.png
+/label-preco-venda.png
