--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,23 +1,3 @@
-/label-financeiro-lucrototal.png
-/label-financeiro-qtdprodutos.png
-/label-financeiro-valorfinanceiro.png
-/label-financeiro-titulo.png
-/label-financeiro-title.png
-/label-relatoriocompras-sub1.png
-/label-relatoriocompras-titulo.png
-/label-relatoriocompras-title.png
-/window/
-/label-relatoriovendas-sub1.png
-/label-relatoriovendas-titulo.png
-/label-relatorioprodutos-sub1.png
-/label-relatorioprodutos-titulo.png
-/botao-menu-estoque.png
-/icone-menu-estoque.png
 /db/
-/label-compra-sub1.png
-/label-compra-sub2.png
-/label-compra-titulo.png
-/.DS_Store
-/label-preco-compra.png
-/label-preco-venda.png
-/label-vendas-sub1.png
+/window/
+/model/
